--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite React TypeScript Audio</title>
-    <script type="module" crossorigin src="/assets/index.8b29fe04.js"></script>
-    <link rel="stylesheet" href="/assets/index.ecde122f.css">
+    <script type="module" crossorigin src="/vite-react-typescript-audio/assets/index.8b29fe04.js"></script>
+    <link rel="stylesheet" href="/vite-react-typescript-audio/assets/index.ecde122f.css">
   </head>
   <body>
     <div id="root"></div>
